[package]
name = "touch-rust"
version = "0.1.0"
authors = ["jelipo <me@jelipo.com>"]
edition = "2018"
description = "Touch the 'Internet'."
license = "MIT"
homepage = "https://github.com/jelipo/touch-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
async-trait = "0.1.41"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.8"
socket2 = "0.3.16"
async-std-resolver = "0.20.0-alpha.3"

cfb-mode = "0.6.0"
aes-gcm = "0.8.0"
chacha20poly1305 = "0.7.1"

async-std = { version = "1.7.0", features = ["unstable"] }
fantasy-util = "0.1.6"

hkdf = "0.10"
sha-1 = "0.9"
base64 = "0.13"
hex = "0.4"
md-5 = "0.9"
