[package]
name = "touch-rust"
version = "0.1.0"
authors = ["jelipo <me@jelipo.com>"]
edition = "2018"
description = "Touch the 'Internet'."
license = "MIT"
homepage = "https://github.com/jelipo/touch-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"

ring = "0.16.20"

trust-dns-resolver = "0.21"
futures = "0.3"
tokio = { version = "1.17", features = ["full"] }
fantasy-util = "0.1.8"
bytes = "1.1"

hkdf = "0.12"
sha-1 = "0.10"
md-5 = "0.10"
rand = "0.8"